test/errors/type/str/isspace.yasl
mt.lookup('', .isspace)(1)
